tests/ui/type-alias-impl-trait/recursive-tait-conflicting-defn.stderr
error: cannot resolve opaque type
  --> $DIR/recursive-tait-conflicting-defn.rs:25:22
   |
LL | fn make_option2() -> Option<TestImpl> {
   |                      ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

